Added: UserRoleControllerTest and fixed response status code